--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -37,6 +37,10 @@
         <action
             android:id="@+id/action_homeFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+
+        <action
+            android:id="@+id/action_homeFragment_to_customProductDetailFragment"
+            app:destination="@+id/customProductDetailFragment"/>
     </fragment>
 
     <fragment
