--- a/agijagi/app/src/main/res/layout/fragment_wish_list.xml
+++ b/agijagi/app/src/main/res/layout/fragment_wish_list.xml
@@ -13,7 +13,9 @@
         android:theme="@style/Theme.AgijagiToolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/menu_wish_list"
+        app:title="찜" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_wish_list"
@@ -25,5 +27,60 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_wish_list" />
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/recyclerview_wish_list_shimmer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_wish_list"
+        tools:visibility="visible">
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:columnCount="2">
+
+            <include layout="@layout/item_wish_list_shimmer" />
+
+            <include layout="@layout/item_wish_list_shimmer" />
+
+            <include layout="@layout/item_wish_list_shimmer" />
+
+            <include layout="@layout/item_wish_list_shimmer" />
+
+            <include layout="@layout/item_wish_list_shimmer" />
+
+            <include layout="@layout/item_wish_list_shimmer" />
+
+        </GridLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/recyclerview_wish_list_empty"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_wish_list"
+        tools:visibility="visible">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="위시 리스트가 비어있습니다"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
