--- a/agijagi/app/src/main/res/layout/fragment_custom_product_detail.xml
+++ b/agijagi/app/src/main/res/layout/fragment_custom_product_detail.xml
@@ -270,6 +270,7 @@
         </ScrollView>
 
         <LinearLayout
+            android:id="@+id/layout_bottom_button_area"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/wide_box_product_detail"
