--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -617,7 +617,7 @@
     </fragment>
     <fragment
         android:id="@+id/signupGoogleBuyerFragment"
-        android:name="likelion.project.agijagi.signup.ui.SignupGoogleBuyerFragment"
+        android:name="likelion.project.agijagi.signup.SignupGoogleBuyerFragment"
         android:label="SignupGoogleBuyerFragment">
         <action
             android:id="@+id/action_signupGoogleBuyerFragment_to_loginFragment"
