--- a/agijagi/app/src/main/res/layout/fragment_google_signup_buyer.xml
+++ b/agijagi/app/src/main/res/layout/fragment_google_signup_buyer.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/jagi_ivory"
     android:orientation="vertical"
-    tools:context=".signup.ui.SignupGoogleBuyerFragment">
+    tools:context=".signup.SignupGoogleBuyerFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_google_signup_buyer_toolbar"
