--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -630,7 +630,7 @@
     </fragment>
     <fragment
         android:id="@+id/signupGoogleSellerFragment"
-        android:name="likelion.project.agijagi.signup.ui.SignupGoogleSellerFragment"
+        android:name="likelion.project.agijagi.signup.SignupGoogleSellerFragment"
         android:label="fragment_google_signup_seller"
         tools:layout="@layout/fragment_google_signup_seller">
         <action
