--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -582,7 +582,7 @@
 
     <fragment
         android:id="@+id/signupSellerFragment"
-        android:name="likelion.project.agijagi.signup.ui.SignupSellerFragment"
+        android:name="likelion.project.agijagi.signup.SignupSellerFragment"
         android:label="fragment_signup_seller"
         tools:layout="@layout/fragment_signup_seller">
         <action
