Refactor: Code cleanup #355 (#374)
* Refactor: ShippingManagementAdapter #355

Code Cleanup

* remove: ShippingManagementModel #355

* Refactor: BuyerMypageFragment #355

Code Cleanup

* Refactor: BuyerNotificationSettingFragment #355

Code Cleanup

* Refactor: ShippingAddFragment #355

Code Cleanup

* Refactor: ShippingManagementFragment #355

Code Cleanup

* Refactor: ShippingUpdateFragment #355

Code Cleanup

* Refactor: CategoryDetailInfoListFragment #355

Code Cleanup
Typo

* Style: CategoryFragment #355

* Style: OrderMadeCategoryFragment #355

* Refactor: ChattingListAdapter #355

Code Cleanup

* Refactor: ChattingListFragment #355

Code Cleanup

* Refactor: ChattingRoomFragment #355

Code Cleanup

* Refactor: DeliveryTrackingFragment #355

Code Cleanup

* Refactor: HomeFragment #355

Code Cleanup

* Refactor: LoginFragment #355

Code Cleanup

* Refactor: NotificationListFragment #355

Code Cleanup

* Refactor: OrderFragment #355

Code Cleanup

* Refactor: CustomProductDetailFragment #355

Code Cleanup, add id on xml

* Refactor: ProductDetailFragment #355

Code Cleanup, add id on xml

* Refactor: CustomOptionFragment #355

Code Cleanup

* Refactor: PaymentFragment #355

Code Cleanup

* Refactor: PurchaseCompleteFragment #355

Code Cleanup

* Refactor: RecentSearchAdapter #355

Code Cleanup

* Refactor: SearchViewModel #355

Code Cleanup

* Refactor: SearchFragment #355

Code Cleanup

* Refactor: ProductListAdapter #355

Code Cleanup

* Remove: ProductListModel.kt

* Refactor: OrderManagementDetailFragment #355

Code Cleanup

* Refactor: ProductAddFragment #355

Code Cleanup

* Refactor: ProductDetailPreviewFragment #355

Code Cleanup

* Refactor: ProductListFragment #355

Code Cleanup

* Refactor: ProductUpdateDetailPreviewFragment #355

Code Cleanup

* Refactor: ProductUpdateFragment #355

Code Cleanup

* Refactor: SellerNotificat

--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -360,7 +360,7 @@
 
     <fragment
         android:id="@+id/signupSelectFragment"
-        android:name="likelion.project.agijagi.signup.ui.SignupSelectFragment"
+        android:name="likelion.project.agijagi.signup.SignupSelectFragment"
         android:label="fragment_signup_select"
         tools:layout="@layout/fragment_signup_select">
         <action
@@ -582,7 +582,7 @@
 
     <fragment
         android:id="@+id/signupSellerFragment"
-        android:name="likelion.project.agijagi.signup.ui.SignupSellerFragment"
+        android:name="likelion.project.agijagi.signup.SignupSellerFragment"
         android:label="fragment_signup_seller"
         tools:layout="@layout/fragment_signup_seller">
         <action
@@ -617,7 +617,7 @@
     </fragment>
     <fragment
         android:id="@+id/signupGoogleBuyerFragment"
-        android:name="likelion.project.agijagi.signup.ui.SignupGoogleBuyerFragment"
+        android:name="likelion.project.agijagi.signup.SignupGoogleBuyerFragment"
         android:label="SignupGoogleBuyerFragment">
         <action
             android:id="@+id/action_signupGoogleBuyerFragment_to_loginFragment"
@@ -630,7 +630,7 @@
     </fragment>
     <fragment
         android:id="@+id/signupGoogleSellerFragment"
-        android:name="likelion.project.agijagi.signup.ui.SignupGoogleSellerFragment"
+        android:name="likelion.project.agijagi.signup.SignupGoogleSellerFragment"
         android:label="fragment_google_signup_seller"
         tools:layout="@layout/fragment_google_signup_seller">
         <action
