--- a/agijagi/app/src/main/res/layout/item_category_detail_info_list.xml
+++ b/agijagi/app/src/main/res/layout/item_category_detail_info_list.xml
@@ -28,6 +28,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <ImageButton
+        android:id="@+id/imagebutton_category_detail_info_list_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
